Fix gradient background not stretched

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
     margin: 0;
     background: linear-gradient(0deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
     background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 .calc-body {
     /* background-color: black;
@@ -19,9 +20,10 @@ body {
     background: rgba( 255, 255, 255, 0.25 );
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
     backdrop-filter: blur( 4px );
-    -webkit-backdrop-filter: blur( 4px );
+    /* -webkit-backdrop-filter: blur( 4px ); */
     border-radius: 1rem;
     border: 1px solid rgba( 255, 255, 255, 0.18 );
+    
 }
 
 .buttons-body {
